<resources>
    <string name="app_name">Moneiager</string>
    <string name="title_activity_on_start">OnStartActivity</string>
    <string name="textview">TextView</string>
    <string name="description">Description</string>
    <string name="price">price</string>
    <string name="button">Button</string>
    <string name="add">Add</string>
    <string name="new_item">New Record</string>
    <string name="date">Date</string>
    <string name="resethistory">Reset History</string>
    <string name="startnewsession">New Session</string>
    <string name="avaliable">Avaliable</string>
    <string name="all_records">All Records</string>
    <string name="history">History</string>
</resources>
