<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".333"
        android:padding="10dp"
        android:text="@string/description"
        />

    <TextView
        android:id="@+id/Price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".333"
        android:padding="10dp"
        android:text="@string/price"
         />

    <TextView
        android:id="@+id/Date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".333"
        android:padding="10dp"
        android:text="@string/date" />

</LinearLayout>
