<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AllHestory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/resetHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resethistory"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/newSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/startnewsession"
            tools:ignore="ButtonStyle"
            android:layout_marginBottom="10sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/Description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".333"
            android:padding="10dp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/Price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".333"
            android:padding="10dp"
            android:text="@string/price" />

        <TextView
            android:id="@+id/Date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".333"
            android:padding="10dp"
            android:text="@string/date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ListView

            android:id="@+id/historyList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp">

        </ListView>
    </LinearLayout>


</LinearLayout>